--- a/front/index.html
+++ b/front/index.html
@@ -79,7 +79,7 @@
   </div>
 
   <script>
-    const API_URL = "/api/search"; // via Nginx proxy_pass
+    const API_URL = "https://itnr-fastapi-mvp.onrender.com/search";
     const form = document.getElementById('form');
     const results = document.getElementById('results');
     const errBox = document.getElementById('err');
