--- a/front/chat.html
+++ b/front/chat.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ITNR – Chat</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script src="config.js"></script>
+  <title>ITNR</title>
+  <link rel="icon" href="itnr_mark.svg" type="image/svg+xml">
+  <!-- cache-buster pour forcer le navigateur à recharger -->
+  <link rel="stylesheet" href="styles.css?v=20250901" />
+  <script src="config.js?v=20250901"></script>
 </head>
 <body>
   <header class="header">
