--- a/front/chat.html
+++ b/front/chat.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ITNR</title>
+  <link rel="stylesheet" href="styles.css?v=1" />
+  <script src="config.js?v=1"></script>
   <link rel="icon" href="itnr_mark.svg" type="image/svg+xml">
-  <!-- cache-buster pour forcer le navigateur à recharger -->
-  <link rel="stylesheet" href="styles.css?v=20250901" />
-  <script src="config.js?v=20250901"></script>
 </head>
 <body>
   <header class="header">
